--- a/index.html
+++ b/index.html
@@ -45,15 +45,17 @@
                 </label>
                 <label>
                     Add a catch phrase
-                    <input id="catchphrase-input" />
+                    <input  type='text' id="catchphrase-input" />
                     <button id="catchphrase-button">Add</button>
                 </label>
             </div>
             <div id="stats">
-                <p id="report"></p>
-                <div id="catchphrases">
+                <p id="headreports"></p>
+                <p id="middlereports"></p>
+                <p id= "bottomreports"></p>
+                <ul id="catchphrases">
                     
-                </div>
+                </ul>
             </div>
         </div>
         <div class="right">
